--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,14 +1,33 @@
 site_name: Yvonne Tool & App Documentation Template
+
+
 nav:
     - Home: index.md
+
     - Checklist REMOVE When Done: Template -Checklist - Creating Software Documentation.md
+
     - Getting Started: Template - Getting Started.md
+
     - How To: Template - How To.md
+
     - Reference Guide: Template - Reference Guide.md
+
+    - Code: Template - Code Main Page.md
+
     - Code Page: Template - Code Documentation.md
+
     - Source Code: https://github.com/YvonneBeirneFitzGerald/Tool-App-Documention-Templates
+
     - Style Guide: Template - Style Guide.md
+
     - About: Template - About The Creators.md
-    - Feedback Page: Template - Feedback.md
-    - Feedback: add https of google form link nothing needs to be added
-theme: readthedocs
+
+    - Feedback: Template - Feedback Mainpage.md
+
+    - Feedback Page: Template - Feedback Mainpage.md
+    - Google Form Feedback: Template - Gooogle Feedbackform.md
+
+    - Delete From Directory: 
+        Bioconductor: bioconductor_guides/README.md
+
+Theme: readthedocs
