Update Footer and Release Notes Page which was renamed from Version History

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,7 +14,7 @@ nav:
     - Feedback Page: Template - Feedback.md
     - Google Form Feedback: Template - Google Feedback Form.md
     - FAQ: Template - FAQ.md
-    - Version History: Template - Version History.md
+    - Release Notes: Template - Release Notes.md
     - Keeping Up To Date: Template - Keeping Up To Date.md
 theme:
     name: readthedocs
