Updated Feedback Form

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,9 +11,7 @@ nav:
     - Source Code: https://github.com/YvonneBeirneFitzGerald/Tool-App-Documention-Templates
     - Style Guide: Template - Style Guide.md
     - About: Template - About The Creators.md
-    - Feedback: Template - Feedback Mainpage.md
-    - Feedback Page: Template - Feedback.md
-    - Google Form Feedback: Template - Google Feedback Form.md
+    - Feedback: Template - Feedback.md
     - Release Notes: Template - Release Notes.md
     - Keeping Up To Date: Template - Keeping Up To Date.md
 theme:
