--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,8 +9,9 @@ nav:
     - Code: Template - Code Main Page.md
     - Code Page: Template - Code Documentation.md
     - Source Code: https://github.com/YvonneBeirneFitzGerald/Tool-App-Documention-Templates
-    - About: Template - About The Creators.md
-    - Style Guide: Template - Style Guide.md
+    - About:
+        - About: Template - About The Creators.md
+        - Style Guide: Template - Style Guide.md
     - Feedback: Template - Feedback.md
     - Release Notes: Template - Release Notes.md
     - Keeping Up To Date: Template - Keeping Up To Date.md
