Update yml for going to source code

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,9 +6,10 @@ nav:
     - How To: Template - How To.md
     - Reference Guide: Template - Reference Guide.md
     - FAQ: Template - FAQ.md
-    - Code: Template - Code Main Page.md
+    - Code:
+    - Code Main Page: Template - Code Main Page.md
     - Code Page: Template - Code Documentation.md
-    - Source Code: https://github.com/YvonneBeirneFitzGerald/Tool-App-Documention-Templates
+    - Go To Source Code: https://github.com/YvonneBeirneFitzGerald/Tool-App-Documention-Templates
     - About:
         - About: Template - About.md
         - Style Guide: Template - Style Guide.md
