--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Yvonne Tool & App Documentation Template
+site_name: Yvonne's Template For Tool & App User Documentation 
 nav:
     - Home: index.md
     - Checklist REMOVE When Done: Template -Checklist - Creating Software Documentation.md
